--- a/style.css
+++ b/style.css
@@ -1,223 +1,452 @@
 @import url(https://fonts.google.com/specimen/Rubik);
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-body {
-    font-family:'Rubik', sans-serif;
-    margin:auto;
-    overflow: hidden;
-}
 
-.square {
-    height: 37rem;
-    width: 23rem;
-    border-bottom-left-radius: 9rem ;
-    border-bottom-right-radius: 9rem;
-    background:hsl(264, 100%, 61%);
-    z-index: 1;
-  }
 
-.rectangle {
-    text-align: center;
-    height: 1rem;
-    width: 7rem;
-    border-bottom-left-radius: 5rem;
-    border-bottom-right-radius: 5rem ;
-    margin-top: -1.1rem;
-    margin-bottom: 0.5rem;
-    margin-left: 3rem;
-    background:beige;
-    z-index: 3;
-  }
-
-.phone {
-    border: 1rem solid beige;
-    width: 15rem;
-    height: 28rem;
-    padding: 1rem;
-    margin-top: 4rem;
-    margin-right: 2rem;
-    margin-left: -2rem;
-    border-radius: 2rem;
-    z-index: 2;
-    background-color: hsl(270, 20%, 96%);
-    font-size: 0.6rem;
-}
-
-.content {
-    display: flex;
-    flex-direction: row;
+@media only screen and (max-width : 940px) {
+    body {
+        font-family:'Rubik', sans-serif;
+        margin:auto;
+        overflow: show;
+    }
     
-}
-
-.title {
-    background-color: blueviolet;
-    border-top-left-radius: 0.2rem;
-    border-top-right-radius: 0.2rem;
-    color: white;
-    margin-left: -1rem;
-    margin-right: -1rem;
-    margin-top: -1rem;
-    margin-bottom: 2rem;
-    padding: 1rem;
-    z-index: 3;
-    text-align: center;
-}
-
-.book {
-    margin-left: 5rem;
-    margin-right: 5rem;
-}
-
-.title2 {
-    display: flex;
-    flex-direction: row;
-}
-
-.avatar {
-    height:1.5rem;
-     width:1.5rem;
-     border: 0.2rem solid white;
-     border-radius : 2rem;
-     margin-top: -4.5rem;
-     margin-left: 0.5rem;
-     z-index: 4;
-}
-
-.second {
-    background-color: hsl(290, 19%, 88%);
-    border : 0.1rem solid hsl(290, 19%, 88%);
-    border-radius: 1rem;
-    color: hsl(276, 55%, 52%);
-    margin-left: -0.5rem;
-    margin-right: 5rem;
-    margin-top: 0.6rem;
-    margin-bottom: -0.2;
-    padding: 0.5rem;
-    padding-right: -2rem;
-    z-index: 3;
-    text-align: left;
-}
-
-.third {
-    background-color: hsl(0, 0%, 100%);
-    border : 0.1rem solid white;
-    border-radius: 1rem;
-    color: hsl(271, 15%, 43%);
-    margin-left: 5rem;
-    margin-right: -0.5rem;
-    margin-top: 0.2rem;
-    padding: 0.5rem;
-    padding-right: -2rem;
-    z-index: 3;
-    text-align: right;
-}
-
-.fourth {
-    background-color: hsl(290, 19%, 88%);
-    border : 0.1rem solid hsl(290, 19%, 88%);
-    border-radius: 1rem;
-    color: color;
-    margin-left: -0.5rem;
-    margin-right: 5rem;
-    margin-top: 0.6rem;
-    margin-bottom: -0.2;
-    padding: 0.5rem;
-    padding-right: -2rem;
-    z-index: 3;
-    text-align: left;
-}
-
-
-.type {
-    background-color: hsl(0, 0%, 100%);
-    border : 0.1rem solid white;
-    border-radius: 1rem;
-    color: hsl(206, 6%, 79%);
-    margin-left: -0.7rem;
-    margin-right: -1rem;
-    margin-top: 0.2rem;
-    padding-top: 0.5rem;
-    padding-bottom: -0.5rem;
-    padding-right: -2rem;
-    z-index: 3;
-    display: flex;
-    flex-direction: row;
-}
-
-.symb {
-
-    font-size: 0.8rem;
-    border : 0.4rem solid hsl(271, 36%, 24%);
-    border-radius : 50%;
-    background-color: hsl(271, 36%, 24%);
-        margin-left:9.8rem;
-        margin-top: -0.5rem;
-        width:30%;
-        width:1rem;
-        height:1rem;
-        text-align:center;
+    .square {
+        height: 25rem;
+        width: 23rem;
+        border-bottom-left-radius: 15rem ;
+        border-bottom-right-radius: 15rem;
+        background:linear-gradient( hsl(293, 100%, 63%), hsl(264, 100%, 61%) );
+        z-index: 1;
+        margin-bottom: -30rem;
+        margin-top: -5rem ;
+        margin-left: -12rem;
+      }
     
-}
-
-
-.doggy {
-    height:3rem;
-     width:3rem;
-     border: 0.2rem solid hsl(270, 20%, 96%);
-     border-radius : 1rem;
-     margin-left: 0.5rem;
-     z-index: 3;
+    .rectangle {
+        text-align: center;
+        height: 1rem;
+        width: 7rem;
+        border-bottom-left-radius: 5rem;
+        border-bottom-right-radius: 5rem ;
+        margin-top: -1.1rem;
+        margin-bottom: 0.5rem;
+        margin-left: -1.2rem;
+        background:beige;
+        z-index: 3;
+      }
     
-}
-
-.dog {
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-  
-}
-
-.book {
-    margin-top: 12rem;
-}
-
-h1 {
-   color: hsl(271, 36%, 24%)
-}
-
-p {
-    color : hsl(270, 7%, 64%);
-}
-
-.square2 {
-    height: 37rem;
-    width: 20rem;
-    margin-top: 3rem;
-    margin-bottom: -3rem;
-    border-top-left-radius: 9rem ;
-    border-top-right-radius: 9rem;
-    background:hsl(264, 100%, 61%);
-    z-index: 1;
-    filter: opacity(10%);
-  }
-
-.attribution {
-    z-index: 2;
-}
-
-
-@media only screen and (min-width : 375px) {
-    img {
+    .phone {
+        border: 0.5rem solid beige;
+        width: 8rem;
+        height: 20rem;
+        padding: 1rem;
+        margin-top: 11rem;
+        margin-right: 2rem;
+        margin-left: 4.6rem;
+        border-radius: 2rem;
+        z-index: 2;
+        background-color: hsl(270, 20%, 96%);
+        font-size: 0.6rem;
+        
+    }
+    
+    .content {
         display: flex;
         flex-direction: column;
-        margin-left: 4rem;
-    } 
+        
+    }
+    
+    .title {
+        background:linear-gradient( 90deg, hsl(264, 100%, 61%) 20%, hsl(293, 100%, 63%) 90%);
+        border-top-left-radius: 1rem;
+        border-top-right-radius: 1rem;
+        color: white;
+        margin-left: -1rem;
+        margin-right: -1rem;
+        margin-top: -1rem;
+        margin-bottom: -2.6rem;
+        padding: 1rem;
+        padding-left: 3rem;
+        z-index: 3;
+        text-align: left;
+    }
+    
+    .book {
+        margin-left: 5rem;
+        margin-right: 5rem;
+    }
+    
+    .title2 {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1rem;
+
+    }
+    
+    .avatar {
+        height:1.5rem;
+         width:1.5rem;
+         border: 0.1rem solid white;
+         border-radius : 2rem;
+         margin-left: -0.5rem;
+         z-index: 4;
+    }
+    
+    .second {
+        background-color: hsl(290, 19%, 88%);
+        border : 0.1rem solid hsl(290, 19%, 88%);
+        border-radius: 0.5rem;
+        color: hsl(276, 55%, 52%);
+        margin-left: -0.5rem;
+        margin-right: 1rem;
+        margin-top: 0.8rem;
+        margin-bottom: -0.4;
+        padding: 0.5rem;
+        padding-right: -2rem;
+        z-index: 3;
+        text-align: left;
+        font-size: 0.3rem;
+    }
+    
+    .third {
+        background-color: hsl(0, 0%, 100%);
+        border : 0.1rem solid white;
+        border-radius: 0.5rem;
+        color: hsl(271, 15%, 43%);
+        margin-left: 2rem;
+        margin-right: -0.5rem;
+        margin-top: 0.2rem;
+        padding: 0.5rem;
+        padding-right: -2rem;
+        z-index: 3;
+        text-align: right;
+        font-size: 0.3rem;
+    }
+    
+    .fourth {
+        background:linear-gradient( 90deg, hsl(264, 100%, 61%) 20%, hsl(293, 100%, 63%) 90%);
+        border : 0.1rem solid hsl(290, 19%, 88%);
+        border-radius: 0.5rem;
+        color: white;
+        margin-left: -0.5rem;
+        margin-right: 5rem;
+        margin-top: 0.2rem;
+        margin-bottom: -0.4;
+        padding: 0.5rem;
+        padding-right: -2rem;
+        z-index: 3;
+        text-align: left;
+        width: 7rem;
+        font-size: 0.3rem;
+    }
+    
+    
+    .type {
+        background-color: hsl(0, 0%, 100%);
+        border : 0.1rem solid white;
+        border-radius: 1rem;
+        color: hsl(206, 6%, 79%);
+        margin-left: -0.7rem;
+        margin-right: -1rem;
+        margin-top: 0.2rem;
+        padding-top: 0.5rem;
+        padding-bottom: -0.5rem;
+        padding-right: -2rem;
+        z-index: 3;
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .symb {
+    
+        font-size: 0.8rem;
+        border : 0.4rem solid hsl(271, 36%, 24%);
+        border-radius : 50%;
+        background-color: hsl(271, 36%, 24%);
+            margin-left:2.7rem;
+            margin-top: -0.5rem;
+            width:30%;
+            width:1rem;
+            height:1rem;
+            text-align:center;
+        
+    }
+    
+    
+    .doggy {
+        height:1.5rem;
+         width:1.5rem;
+         border: 0.2rem solid hsl(270, 20%, 96%);
+         border-radius : 0.5rem;
+         margin-left: 0.5rem;
+         z-index: 3;
+        
+    }
+    
+    .dog {
+        display: flex;
+        flex-direction: row;
+        justify-content: right;
+      
+    }
+    
+    .book {
+        margin-top: 3rem;
+    }
+    
+    h1 {
+       color: hsl(271, 36%, 24%);
+       text-align: center;
+       margin-left: -4.4rem;
+       width: 20rem
+    }
+    
+    .p {
+        color : hsl(270, 7%, 64%);
+        text-align: center;
+        width: 18rem;
+        margin-left: -3.4rem;
+        margin-top: -1rem;
+    }
+    
+    .square2 {
+        height: 37rem;
+        width: 20rem;
+        margin-top: 3rem;
+        margin-bottom: -3rem;
+        border-top-left-radius: 9rem ;
+        border-top-right-radius: 9rem;
+        background:hsl(264, 100%, 61%);
+        z-index: 1;
+        filter: opacity(10%);
+      }
+    
+    .attribution {
+        z-index: 2;
+    }
+    
 }
 
-@media only screen and (min-width : 1440px) {
-    img {
-        display: inline-block;
-        margin-left: 18rem;
-        margin-right: auto;
+@media only screen and (min-width : 941px) {
+   
+        body {
+            font-family:'Rubik', sans-serif;
+            margin:auto;
+            overflow: hidden;
+        }
+        
+        .square {
+            height: 37rem;
+            width: 43rem;
+            border-bottom-left-radius: 15rem ;
+            border-bottom-right-radius: 15rem;
+            background:linear-gradient( hsl(293, 100%, 63%), hsl(264, 100%, 61%) );
+            z-index: 1;
+            margin-left: -5rem;
+          }
+        
+          .rectangle {
+            text-align: center;
+            height: 1rem;
+            width: 7rem;
+            border-bottom-left-radius: 5rem;
+            border-bottom-right-radius: 5rem ;
+            margin-top: -1.1rem;
+            margin-bottom: 0.5rem;
+            margin-left: -0.2rem;
+            background:beige;
+            z-index: 3;
+          }
+        
+          .phone {
+            border: 0.5rem solid beige;
+            width: 10rem;
+            height: 24rem;
+            padding: 1rem;
+            margin-top: 6rem;
+            margin-right: 2rem;
+            margin-left: -1.6rem;
+            border-radius: 2rem;
+            z-index: 2;
+            background-color: hsl(270, 20%, 96%);
+            font-size: 0.6rem;
+            
+        }
+        
+        .content {
+            display: flex;
+            flex-direction: row;
+            
+        }
+        
+        .title {
+            background:linear-gradient( 90deg, hsl(264, 100%, 61%) 20%, hsl(293, 100%, 63%) 90%);
+            border-top-left-radius: 1rem;
+            border-top-right-radius: 1rem;
+            color: white;
+            margin-left: -1rem;
+            margin-right: -1rem;
+            margin-top: -1rem;
+            margin-bottom: -2.6rem;
+            padding: 1rem;
+            padding-left: 3rem;
+            z-index: 3;
+            text-align: left;
+        }
+        
+        .book {
+            margin-left: 5rem;
+            margin-right: 5rem;
+        }
+        
+        .title2 {
+            display: flex;
+            flex-direction: row;
+        }
+        
+        .avatar {
+            height:1.5rem;
+             width:1.5rem;
+             border: 0.1rem solid white;
+             border-radius : 2rem;
+             margin-left: -0.5rem;
+             z-index: 4;
+        }
+        
+        .second {
+            background-color: hsl(290, 19%, 88%);
+            border : 0.1rem solid hsl(290, 19%, 88%);
+            border-radius: 0.5rem;
+            color: hsl(276, 55%, 52%);
+            margin-left: -0.5rem;
+            margin-right: 1rem;
+            margin-top: 0.8rem;
+            margin-bottom: -0.1rem;
+            padding: 0.5rem;
+            padding-right: -2rem;
+            z-index: 3;
+            text-align: left;
+            font-size: 0.5rem;
+            width: 7rem;
+        }
+        
+        .third {
+            background-color: hsl(0, 0%, 100%);
+            border : 0.1rem solid white;
+            border-radius: 0.5rem;
+            color: hsl(271, 15%, 43%);
+            margin-left: 2rem;
+            margin-right: -0.5rem;
+            margin-top: 0.2rem;
+            padding: 0.5rem;
+            padding-right: -2rem;
+            z-index: 3;
+            text-align: right;
+            font-size: 0.5rem;
+        }
+        
+        .fourth {
+            background:linear-gradient( 90deg, hsl(264, 100%, 61%) 20%, hsl(293, 100%, 63%) 90%);
+            border : 0.1rem solid hsl(290, 19%, 88%);
+            border-radius: 0.5rem;
+            color: white;
+            margin-left: -0.5rem;
+            margin-right: 5rem;
+            margin-top: 0.4rem;
+            margin-bottom: 0.3;
+            padding: 0.5rem;
+            padding-right: -2rem;
+            z-index: 3;
+            text-align: left;
+            width: 8rem;
+            font-size: 0.5rem;
+        }
+        
+        
+        .type {
+            background-color: hsl(0, 0%, 100%);
+            border : 0.1rem solid white;
+            border-radius: 1rem;
+            color: hsl(206, 6%, 79%);
+            margin-left: -0.7rem;
+            margin-right: -1rem;
+            margin-top: 0.2rem;
+            padding-top: 0.5rem;
+            padding-bottom: -0.5rem;
+            padding-right: -2rem;
+            z-index: 3;
+            display: flex;
+            flex-direction: row;
+        }
+        
+        .symb {
+        
+            font-size: 0.8rem;
+            border : 0.4rem solid hsl(271, 36%, 24%);
+            border-radius : 50%;
+            background-color: hsl(271, 36%, 24%);
+                margin-left:4.6rem;
+                margin-top: -0.5rem;
+                width:30%;
+                width:1rem;
+                height:1rem;
+                text-align: center;
+            
+        }
+        
+        
+        .doggy {
+            height:2rem;
+             width:2rem;
+             border: 0.2rem solid hsl(270, 20%, 96%);
+             border-radius : 0.5rem;
+             margin-left: 0.5rem;
+             z-index: 3;
+             margin-top: 0.1rem;
+            
+        }
+        
+        .dog {
+            display: flex;
+            flex-direction: row;
+            justify-content: right;
+          
+        }
+        
+        
+        
+        
+        .book {
+            margin-top: 12rem;
+            width : 17rem;
+        }
+        
+        h1 {
+           color: hsl(271, 36%, 24%)
+        }
+        
+        .p {
+            color : hsl(270, 7%, 64%);
+           width: 27rem;
+        }
+        
+        .square2 {
+            height: 37rem;
+            width: 40rem;
+            margin-left: 0.5rem;
+            margin-top: 5rem;
+            margin-right: -5rem;
+            margin-bottom: -3rem;
+            border-top-left-radius: 15rem ;
+            border-top-right-radius: 15rem;
+            background:hsl(264, 100%, 61%);
+            z-index: 1;
+            filter: opacity(5%);
+          }
+        
+        .attribution {
+            z-index: 2;
+            margin-top: -2rem;
+        }
+        
         
     } 
-}
